feat: update 1.1 datatype-comparison.md

--- a/1. JavaScript/1.1 datatype-comparison.md
+++ b/1. JavaScript/1.1 datatype-comparison.md
@@ -1,3 +1,5 @@
+# 데이터 타입과 동등 비교
+
 렌더링을 일으키는 요인 중 하나인 props의 **동등 비교**
 
 ⇒ 객체의 **얕은 비교** 를 기반으로 발생
@@ -80,7 +82,7 @@ console.log(hello.greet === hi.greet); // true
 
 == 는 강제 형변환 후 비교를 진행
 
-→ [Object.is](http://Object.is) 는 이와 다르게 형변환을 하지 않은 채 비교 ( === 와 동일 )
+→ Object.is 는 이와 다르게 형변환을 하지 않은 채 비교 ( === 와 동일 )
 
 ### === 보다 정확한 비교
 
@@ -95,11 +97,11 @@ NaN === 0 / 0; //false
 Object.is(NaN, 0 / 0); //true
 ```
 
-그러나 [Object.is](http://Object.is) 역시 객체 비교에 있어서 앞서 설명한 방식과 동일하게 작동
+그러나 Object.is 역시 객체 비교에 있어서 앞서 설명한 방식과 동일하게 작동
 
 ## 리액트에서의 동등 비교
 
-리액트에서는 == 와 === 가 아닌 [**Object.is**](http://Object.is) 를 통해서 동등 비교 진행
+리액트에서는 == 와 === 가 아닌 **Object.is** 를 통해서 동등 비교 진행
 
 ⇒ ES6에서 제공하는 기능이기 때문에 이를 구현한 폴리필(Polyfill) 을 함께 사용
 
@@ -113,7 +115,7 @@ Object.is(NaN, 0 / 0); //true
 
 ---
 
-요약하자면 [Object.is](http://Object.is) 를 통해서 비교를 수행한 후 객체 간 **얕은 비교** 를 수행
+요약하자면 Object.is 를 통해서 비교를 수행한 후 객체 간 **얕은 비교** 를 수행
 
 ### 얕은 비교란 ?
 
