--- a/2. React/2.4 Rendering.md
+++ b/2. React/2.4 Rendering.md
@@ -8,7 +8,9 @@
 
 - 최초 렌더링
 - 리렌더링
+
   - 클래스 컴포넌트의 `setState` 가 실행되는 경우
+
   - 클래스 컴포넌트의 `forceUpdate` 가 실행되는 경우
     (render가 state나 props가 아닌 다른 값에 의존하고 있어 리렌더링을 자동으로 실행할 수 없는 경우)
   - 함수 컴포넌트의 `useState()` 의 두 번째 요소인 setter가 실행되는 경우
@@ -100,6 +102,7 @@ export default App;
 ```
 
 1. B의 `setState` 호출
+
 2. B 컴포넌트의 리렌더링 작업이 렌더링 큐에 들어감
 3. 리액트가 트리 최상단부터 렌더링 경로 검사
 4. A는 렌더링이 필요하지 않아 별도의 작업 X
@@ -121,10 +124,11 @@ export default App;
 - 리액트에서의 렌더링은 `setter` 가 동작할 경우 시행되는 것임
   - 이때 변화를 감지하여 체크하는 것이 렌더이고, 이때 생긴 변화를 실제 DOM 에 적용하는 것이 커밋
 - 즉, `setter` 가 동작하여도 `state` 에 변화가 없는 경우
-  → 리액트에서는 렌더링을 진행하지만 실제 변화는 없기 때문에 브라우저에서의 렌더링은 발생하지 않음
-      반대로 `setter` 가 동작하여 `state` 가 변하는 경우
-      → 마찬가지로 리액트에서 렌더링을 진행
-      이때 렌더를 통하여 변경 사항을 체크하고 커밋을 통해 이를 DOM 에 적용하며 브라우저에서의 렌더링이 발생한다
+  → 리액트에서는 렌더링을 진행하지만 실제 변화는 없기 때문에 브라우저에서의 렌더링은 발생하지 않음<br/>
+
+  반대로 `setter` 가 동작하여 `state` 가 변하는 경우
+  → 마찬가지로 리액트에서 렌더링을 진행
+  이때 렌더를 통하여 변경 사항을 체크하고 커밋을 통해 이를 DOM 에 적용하며 브라우저에서의 렌더링이 발생한다
 
 ```jsx
 import { useState } from 'react';
