--- a/2. React/2.4 Rendering.md
+++ b/2. React/2.4 Rendering.md
@@ -127,7 +127,7 @@ export default App;
   → 리액트에서는 렌더링을 진행하지만 실제 변화는 없기 때문에 브라우저에서의 렌더링은 발생하지 않음<br/>
 
   반대로 `setter` 가 동작하여 `state` 가 변하는 경우
-  → 마찬가지로 리액트에서 렌더링을 진행
+  → 마찬가지로 리액트에서 렌더링을 진행 <br/>
   이때 렌더를 통하여 변경 사항을 체크하고 커밋을 통해 이를 DOM 에 적용하며 브라우저에서의 렌더링이 발생한다
 
 ```jsx
